--- a/Specs/ScaleMonkAds-AppLovinMediation/10.2.0.1/ScaleMonkAds-AppLovinMediation.podspec.json
+++ b/Specs/ScaleMonkAds-AppLovinMediation/10.2.0.1/ScaleMonkAds-AppLovinMediation.podspec.json
@@ -28,6 +28,42 @@
     "dependencies": {
         "AppLovinSDK": [
             "10.2.0"
+        ],
+        "AppLovinMediationGoogleAdapter": [
+            "8.7.0.0"
+        ],
+        "AppLovinMediationByteDanceAdapter": [
+            "3.3.6.2.0"
+        ],
+        "AppLovinMediationChartboostAdapter": [
+            "8.4.0.1"
+        ],
+        "AppLovinMediationFacebookAdapter": [
+            "6.2.1.0"
+        ],
+        "AppLovinMediationFyberAdapter": [
+            "7.8.1.0"
+        ],
+        "AppLovinMediationInMobiAdapter": [
+            "9.1.1.1"
+        ],
+        "AppLovinMediationIronSourceAdapter": [
+            "7.1.5.0.0"
+        ],
+        "AppLovinMediationMintegralAdapter": [
+            "6.9.1.0.0"
+        ],
+        "AppLovinMediationSmaatoAdapter": [
+            "21.6.10.0"
+        ],
+        "AppLovinMediationTapjoyAdapter": [
+            "12.7.1.0"
+        ],
+        "AppLovinMediationUnityAdsAdapter": [
+            "3.6.0.0"
+        ],
+        "AppLovinMediationVungleAdapter": [
+            "6.8.1.0"
         ]
     },
     "static_framework": true,
