--- a/Specs/ScaleMonkAds-AppLovinMediation/10.2.0.1/ScaleMonkAds-AppLovinMediation.podspec.json
+++ b/Specs/ScaleMonkAds-AppLovinMediation/10.2.0.1/ScaleMonkAds-AppLovinMediation.podspec.json
@@ -26,7 +26,7 @@
         "AdSupport"
     ],
     "dependencies": {
-        "ScaleMonkAds-AppLovin"[ 
+        "ScaleMonkAds-AppLovin": [ 
             "10.2.0.1"
         ],
         "AppLovinSDK": [
